Bug 897092 - Fix setTargetAtTime glitch. r=ehsan, a=webaudio